fix the bugs that somehow I didn't catch before - fix template comments - make invisible forge logo text not overlap hamburger - fix page going blank upon login

--- a/frontend/src/components/NavBar/styles/NavBar.scss
+++ b/frontend/src/components/NavBar/styles/NavBar.scss
@@ -101,6 +101,7 @@
     text-transform: uppercase;
     overflow: visible;
     white-space: nowrap;
+    width: 100%;
 }
 
 .nav-menu-content {
@@ -137,8 +138,6 @@
     margin-top: -10px;
     z-index: 1;
     transition: width, transform 250ms ease;
-
-    
 }
 .indicator[data-state="visible"] {
     animation: fade-in 200ms ease;
@@ -320,7 +319,7 @@
         height: 20pt;
         scale: 100%;
         opacity: 1;
-        z-index: 0;
+        z-index: 999; // prevent going under logo icon
     }
     .separator {
         margin-left: 0;
